--- a/templates/index.html
+++ b/templates/index.html
@@ -9,6 +9,8 @@
     <script src="main.js"></script>
 </head>
 <body>
-    OLA
+    <h1>Tuirer</h1>
+    <p>{{ country }}</p>
+    <img src="{{ flag }}">
 </body>
 </html>
