--- a/templates/index.html
+++ b/templates/index.html
@@ -10,7 +10,8 @@
 </head>
 <body>
     <h1>Tuirer</h1>
-    <p>{{ country }}</p>
-    <img src="{{ flag }}">
+    <p>
+        {{ now|date:"d/n/Y" }}
+    </p>
 </body>
 </html>
